Test on EU868 band

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -44,7 +44,7 @@ option(USE_USB_CDC "Use USB-Uart" ON)
 option(USE_BOOTLOADER "Use Bootloader" ON)
 
 # Switch for debugger support.
-option(USE_DEBUGGER "Use Debugger" ON)
+option(USE_DEBUGGER "Use Debugger" OFF)
 
 #---------------------------------------------------------------------------------------
 # Target Boards
